# AlteraRustClient

./: .env.example  .gitignore  Cargo.toml  Dockerfil.test  Dockerfile  README.md
src/: api.rs  logic.rs  main.rs  sms.rs  utils.rs
src/interaction/: adminbal.rs  balance.rs  checksms.rs  get_countries.rs  getnumber.rs  mod.rs  search.rs  userdata.rs
src/sms/: create_sms_order.rs  get_api_balance.rs  get_country_prices.rs  get_service_list.rs  get_sms_code.rs  mod.rs
