[package]
name = "client_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparkle-convenience = { version = "0.15" }
twilight-http = { version = "0.15.4", default-features = false, features = ["decompression", "simd-json", "rustls-webpki-roots", "trust-dns"] }
twilight-gateway = { version = "0.15", default-features = false, features = ["simd-json", "rustls-webpki-roots", "twilight-http", "zlib-simd"] }
twilight-model = "0.15"
twilight-util = { version = "0.15", features = ["builder"] }
twilight-interactions = "0.15"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
futures = { version = "0.3", default-features = false }
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version="0.11", features = ["json"] }
serde = "1.0.195"
serde_json = "1.0.111"
serde_derive = "1.0.195"
